2014-08-31  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Get rid of C-style typedef for enum.

	* src/wordseg.cpp (enum TextToken):
	  - Just use C++ typing.

2014-08-30  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Drop unneeded include.

	* src/wordseg.cpp:
	  - Drop unneeded "dictpath.h" include.

2014-08-30  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Drop unneeded include.

	* src/maxwordseg.cpp:
	  - Drop unneeded standard C includes.

2014-08-30  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Drop unneeded include.

	* src/longwordseg.cpp:
	  - Drop unneeded "dictpath.h" & standard C includes.

2014-08-30  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Drop unused function & member.

	* src/filterlatex.h, src/filterlatex.cpp (FilterLatex::AdjustText):
	  - Drop unused member function.
	* src/filterlatex.h, src/filterlatex.cpp (FilterLatex::FilterLatex):
	  - Drop now-unused member 'winCharSet'.
	  - Drop c-tor parameter 'latexflag' used for winCharSet
	    initialization.
	* src/filterlambda.h (FilterLambda::FilterLambda):
	  - Drop c-tor parameter 'latexflag'.

2014-08-30  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Drop unused member.

	* src/filterlatex.h, src/filterlatex.cpp (class FilterLatex):
	  - Drop unused member 'latexFlag'.

2014-08-30  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* README: Update thailatex info to babel-thai.

2014-08-30  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update copyright info.

	* src/wordseg.cpp (Version):
	  - Update copyright year.
	  - Update my e-mail address.

2014-08-29  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update man page.

	* src/swath.1:
	  - Revise wording.
	  - Use two spaces to delimit sentences.
	  - Update thailatex info to babel-thai.
	  - Update my e-mail address.

2014-08-29  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* README: Update my e-mail address.

2014-08-28  Theppitak Karoonboonyanan  <theppitak@gmail.com>
